# LocalMind

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI_PROVIDERS.md  API_CONFIGURATION.md  API_DOCUMENTATION.md  API_MODELS.md  API_SETUP_QUICK.md  BACKEND_ARCHITECTURE.md  BRANCHES.md  CHANGELOG.md  CODE_EXAMPLES.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  FUTURE_IMPROVEMENTS.md  IMPROVEMENTS.md  README.md  SETUP_GUIDE.md  TODO.md  UNRESTRICTED_MODE.md  VSCODE_INTEGRATION.md  configure-apis.bat  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  shared_context.json  start-web-advanced.bat  start-web.bat  start-web.ps1
.github/workflows/: ci.yml
docs/: CONTROL_SCRIPTS.md  DEVELOPMENT_PLAN.md  DISCORD_INTEGRATION.md  INSTALL_STEPS.md  MODEL_MANAGEMENT.md  PLUGIN_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TROUBLESHOOTING.md  WEB_INTERFACE.md  openapi.yaml
models/: README.md  __init__.py
scripts/: configure_apis.py  start-web-advanced.bat  start-web.bat  start-web.ps1
src/: __init__.py
src/backends/: __init__.py  anthropic.py  base.py  cohere.py  gguf.py  google.py  groq.py  mistral_ai.py  ollama.py  openai.py  transformers.py
src/backends/code_execution/: __init__.py  base.py  bash_executor.py  javascript_executor.py  python_executor.py
src/backends/video/: __init__.py  base.py  haiper.py  kling.py  luma.py  pika.py  runway.py  sora.py  sora2.py  stability.py
src/cli/: interface.py
src/core/: __init__.py  ab_testing.py  audit_logger.py  batch_processor.py  cache.py  code_execution_manager.py  config_backup.py  connection_pool.py  context_manager.py  conversation_encryption.py  conversation_importer.py  conversation_manager.py  ensemble.py  finetuning.py  key_manager.py  local_only_mode.py  migration_tools.py  model_loader.py  model_manager.py  model_registry.py  model_router.py  model_versioning.py  module_loader.py  plugin_manager.py  privacy_audit.py  privacy_manager.py  rate_limiter.py  resource_cleanup.py  resource_monitor.py  response_quality.py  shared_context.py  streaming_enhancer.py  tool_executor.py  tool_registry.py  usage_tracker.py  video_cache.py  video_loader.py  video_manager.py  video_queue.py  video_templates.py  (+1 more)
src/modules/: __init__.py  base.py
src/modules/automation/: __init__.py  tools.py
src/modules/coding/: __init__.py  assistant.py
src/modules/file_processor/: __init__.py  processor.py
src/modules/text_gen/: __init__.py  generator.py
src/utils/: config.py  logger.py
src/web/: __init__.py  server.py
src/web/routes/: __init__.py  additional_routes.py  base.py  chat_routes.py  code_execution_routes.py  config_routes.py  conversation_routes.py  model_routes.py  plugin_routes.py  video_routes.py  video_websocket.py  webhook_routes.py
src/web/static/css/: style.css
src/web/static/js/: app.js  code.js  configure.js  video.js
src/web/templates/: code.html  configure.html  index.html  video.html
tests/: README.md  __init__.py  test_backends.py  test_config.py  test_context_manager.py  test_conversation_manager.py  test_e2e.py  test_model_loader.py  test_model_registry.py  test_module_loader.py  test_web_server.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
